# llama-index-memory-infolang

./: LICENSE  README.md  pyproject.toml
examples/: InfoLangMemory.ipynb
llama_index/memory/infolang/: __init__.py  base.py  utils.py
tests/: test_infolang_memory.py
